# CV_VisualFusion_FeatureMatching

./: README.md
IR_Convert_v21_libtorch/: CMakeLists.txt  gcc.sh  main.cpp  test.cpp  test.py  test_image_homo_errors.csv
IR_Convert_v21_libtorch/config/: config.json
IR_Convert_v21_libtorch/lib_image_fusion/src/: core_image_align_libtorch.cpp  core_image_fusion.cpp
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/model_jit/: SemLA.py  utils.py  utils.py.debug_pkl
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/model_jit/reg/: ___torch_mangle_36.py  ___torch_mangle_49.py  ___torch_mangle_66.py
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/model_jit/utils/: ___torch_mangle_12.py  ___torch_mangle_16.py  ___torch_mangle_22.py  ___torch_mangle_35.py  ___torch_mangle_48.py  ___torch_mangle_58.py  ___torch_mangle_6.py.debug_pkl  ___torch_mangle_9.py
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/torch/nn/: functional.py.debug_pkl
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/torch/nn/functional/: ___torch_mangle_70.py.debug_pkl
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/torch/nn/modules/: activation.py  batchnorm.py.debug_pkl  conv.py  linear.py.debug_pkl
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/torch/nn/modules/batchnorm/: ___torch_mangle_15.py  ___torch_mangle_15.py.debug_pkl  ___torch_mangle_38.py.debug_pkl  ___torch_mangle_51.py
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/torch/nn/modules/container/: ___torch_mangle_68.py.debug_pkl
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/code/__torch__/torch/nn/modules/conv/: ___torch_mangle_0.py  ___torch_mangle_0.py.debug_pkl  ___torch_mangle_10.py  (+11 more)
IR_Convert_v21_libtorch/model/SemLA_jit_cuda/data/: 0  104  105  108  110  111  112  113  115  118  120  121  124  129  130  134  138  14  143  144  150  151  154  156  159  162  165  168  17  174  176  178  179  183  190  195  205  208  211  212  (+46 more)
Onnx/: CMakeLists.txt  gcc.sh  image_homo_errors.csv  main.cpp  test_onnx_python.py
Onnx/config/: config.json
Onnx/lib_image_fusion/include/: core_image_align_onnx_polar.h  core_image_align_onnxrt.h
Onnx/lib_image_fusion/src/: core_image_align_onnxrt.cpp  core_image_fusion.cpp
Onnx/model/SemLA_jit_cuda/code/__torch__/model_jit/: SemLA.py.debug_pkl  reg.py.debug_pkl
Onnx/model/SemLA_jit_cuda/code/__torch__/model_jit/reg/: ___torch_mangle_13.py  ___torch_mangle_59.py
Onnx/model/SemLA_jit_cuda/code/__torch__/model_jit/utils/: ___torch_mangle_22.py.debug_pkl  ___torch_mangle_26.py  ___torch_mangle_42.py  ___torch_mangle_45.py  ___torch_mangle_65.py
Onnx/model/SemLA_jit_cuda/code/__torch__/torch/nn/: functional.py
Onnx/model/SemLA_jit_cuda/code/__torch__/torch/nn/functional/: ___torch_mangle_70.py
Onnx/model/SemLA_jit_cuda/code/__torch__/torch/nn/modules/: container.py.debug_pkl  normalization.py.debug_pkl
Onnx/model/SemLA_jit_cuda/data/: 1  10  100  101  106  107  114  122  132  133  137  140  142  145  146  149  16  160  161  166  170  172  173  18  180  182  187  188  189  194  2  200  202  203  206  209  216  22  226  23  (+47 more)
tensorRT/: CMakeLists.txt  gcc.sh  image_homo_errors.csv  main.cpp  test_onnx_simple.cpp  test_trt_inference.py
tensorRT/config/: config.json
tensorRT/lib_image_fusion/include/: core_image_align_onnx.h  core_image_align_tensorrt.h  core_image_perspective.h
tensorRT/lib_image_fusion/src/: core_image_align_libtorch.cpp  core_image_align_onnx.cpp  core_image_align_onnx_polar.cpp  core_image_align_tensorrt.cpp  core_image_align_tensorrt.cpp.bak  core_image_align_tensorrt_new.cpp  core_image_perspective.cpp
tensorRT/model/SemLA_jit_cuda/: data.pkl
tensorRT/model/SemLA_jit_cuda/code/__torch__/model_jit/: reg.py
tensorRT/model/SemLA_jit_cuda/code/__torch__/model_jit/reg/: ___torch_mangle_13.py.debug_pkl  ___torch_mangle_23.py  ___torch_mangle_33.py  ___torch_mangle_46.py  ___torch_mangle_49.py.debug_pkl
tensorRT/model/SemLA_jit_cuda/code/__torch__/model_jit/utils/: ___torch_mangle_19.py  ___torch_mangle_26.py.debug_pkl  ___torch_mangle_29.py  ___torch_mangle_29.py.debug_pkl  ___torch_mangle_32.py  ___torch_mangle_39.py  ___torch_mangle_52.py  ___torch_mangle_55.py  ___torch_mangle_6.py  ___torch_mangle_9.py.debug_pkl
tensorRT/model/SemLA_jit_cuda/code/__torch__/torch/nn/modules/: activation.py.debug_pkl  batchnorm.py  container.py  conv.py.debug_pkl  linear.py  normalization.py
tensorRT/model/SemLA_jit_cuda/data/: 102  11  116  117  12  123  126  127  128  13  135  136  139  148  152  155  157  158  164  167  171  177  181  184  186  19  192  193  196  198  199  20  201  204  210  217  221  222  223  224  (+70 more)
tensorRT/utils/include/: homography_validator.h
(+61 files in other folders)
